# hs-wayland-scanner

./: README.md  hs-wayland-scanner.cabal
examples/hello-world/: Buffer.hs  HelloWorld.hs  README.md  hello-world.cabal  hs-wayland-scanner.cfg
examples/simple-client/: README.md  hs-wayland-scanner.cfg  simple-client.cabal  simple-client.hs
examples/simple-digital-clock/: README.md  SimpleDigitalClock.cabal
examples/simple-digital-clock/src/Graphics/Wayland/SimpleDigitalClock/: BufferPool.hs  Cairo.hs  Listeners.hs  Main.hs  Render.hs  Resource.hs  Types.hs
examples/simple-server/: README.md  hs-wayland-scanner.cfg  simple-server.cabal  simple-server.hs
src/Graphics/Wayland/: Scanner.hs
src/Graphics/Wayland/Scanner/: Generate.hs  Main.hs  Parse.hs  Render.hs  RenderC.hs  Solve.hs  Template.hs  Text.hs  Types.hs
