cabal-version: 3.0
name:          hs-wayland-scanner
version:       0.1.0
homepage:      https://codeberg.org/andrea_rossato/hs-wayland-scanner
synopsis:      Haskell implementation of the Wayland Message Definition Language
description:   hs-wayland-scanner is an implementation of the Wayland
               Message Definition Language. It will produce low-level
               Haskell bindings for Wayland protocols.

category:           System
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unitn.it
extra-source-files: README.md
                    LICENSE
                    examples/**/*.cabal
                    examples/**/*.cfg
                    examples/**/*.hs
                    examples/**/*.md
                    examples/hello-world/protocols/*.xml
                    examples/simple-client/protocols/*.xml
                    examples/simple-server/protocols/*.xml
build-type:         Simple

source-repository head
    type:     git
    location: https://codeberg.org/andrea_rossato/hs-wayland-scanner

library
    hs-source-dirs:  ./src
    exposed-modules: Graphics.Wayland.Scanner
                     Graphics.Wayland.Scanner.Generate
                     Graphics.Wayland.Scanner.Parse
                     Graphics.Wayland.Scanner.Render
                     Graphics.Wayland.Scanner.RenderC
                     Graphics.Wayland.Scanner.Solve
                     Graphics.Wayland.Scanner.Text
                     Graphics.Wayland.Scanner.Types
    build-depends:   base, text, bytestring, containers, directory, filepath, process, xml
    ghc-options:     -O -Wall
    ghc-prof-options: -auto-all
    default-language: Haskell2010

executable hws
    main-is:        Graphics/Wayland/Scanner/Main.hs
    hs-source-dirs: ./src
    other-modules:  Graphics.Wayland.Scanner
                    Graphics.Wayland.Scanner.Generate
                    Graphics.Wayland.Scanner.Parse
                    Graphics.Wayland.Scanner.Render
                    Graphics.Wayland.Scanner.RenderC
                    Graphics.Wayland.Scanner.Solve
                    Graphics.Wayland.Scanner.Text
                    Graphics.Wayland.Scanner.Types
    build-depends:  base, text, bytestring, containers, directory, filepath, process, xml
    ghc-options:    -O -Wall -main-is Graphics.Wayland.Scanner.Main
    ghc-prof-options: -auto-all
    default-language: Haskell2010
