cabal-version: 3.0
name:          hs-wayland-scanner
version:       0.1.0
homepage:      https://codeberg.org/andrea_rossato/hs-wayland-scanner
synopsis:      Haskell implementation of the Wayland Message Definition Language
description:   hs-wayland-scanner is an implementation of the Wayland
               Message Definition Language. It will produce low-level
               Haskell bindings for Wayland protocols.

category:           System
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrea Rossato
maintainer:         andrea.rossato@unitn.it
extra-source-files: README.md
                    LICENSE
                    examples/**/*.cabal
                    examples/**/*.cfg
                    examples/**/*.hs
                    examples/**/*.md
                    examples/hello-world/protocol/*.xml
                    examples/simple-client/protocol/*.xml
                    examples/simple-server/protocol/*.xml
                    examples/simple-digital-clock/protocol/*.xml
                    examples/simple-digital-clock/src/Graphics/Wayland/SimpleDigitalClock/*.hs
build-type:         Simple

source-repository head
    type:     git
    location: https://codeberg.org/andrea_rossato/hs-wayland-scanner

library
    hs-source-dirs:  ./src
    exposed-modules: Graphics.Wayland.Scanner
                     Graphics.Wayland.Scanner.Generate
                     Graphics.Wayland.Scanner.Parse
                     Graphics.Wayland.Scanner.Render
                     Graphics.Wayland.Scanner.RenderC
                     Graphics.Wayland.Scanner.Solve
                     Graphics.Wayland.Scanner.Template
                     Graphics.Wayland.Scanner.Text
                     Graphics.Wayland.Scanner.Types
    build-depends:  base       >= 4.10 && < 4.30,
                    text       >= 2.0 && < 2.5,
                    bytestring >= 0.5 && < 0.20,
                    containers >= 0.7 && < 0.10,
                    directory  >= 1.2 && < 1.6,
                    filepath   >= 1.2 && < 1.6,
                    process    >= 1.6 && < 1.7,
                    xml        >= 1.3 && < 1.4
    ghc-options:     -Wall
    default-language: Haskell2010

executable hws
    main-is:        Graphics/Wayland/Scanner/Main.hs
    hs-source-dirs: ./src
    other-modules:  Graphics.Wayland.Scanner
                    Graphics.Wayland.Scanner.Generate
                    Graphics.Wayland.Scanner.Parse
                    Graphics.Wayland.Scanner.Render
                    Graphics.Wayland.Scanner.RenderC
                    Graphics.Wayland.Scanner.Solve
                    Graphics.Wayland.Scanner.Template
                    Graphics.Wayland.Scanner.Text
                    Graphics.Wayland.Scanner.Types
    build-depends:  base       >= 4.10 && < 4.30,
                    text       >= 2.0 && < 2.5,
                    bytestring >= 0.5 && < 0.20,
                    containers >= 0.7 && < 0.10,
                    directory  >= 1.2 && < 1.6,
                    filepath   >= 1.2 && < 1.6,
                    process    >= 1.6 && < 1.7,
                    xml        >= 1.3 && < 1.4
    ghc-options:    -Wall -main-is Graphics.Wayland.Scanner.Main
    default-language: Haskell2010
